--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Roxo</title>
+
   </head>
-  <body style="overflow-x: hidden">
+  <body class="body-background-color" style="overflow-x: hidden; background-color:#262250;">
     <!-- <div className="body-upper" > -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
